# uwuland

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  TRANS_RIGHTS.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/scripts/: setup_system.sh
