[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
authors = ["pauliesnug"]
edition = "2021"
homepage = "https://github.com/pulseflow/uwuland"
repository = "https://github.com/pulseflow/uwuland"
readme = "README.md"
license = "GPL-3.0-only"
license-file = "LICENSE"
categories = ["linux-utilities"]
keywords = [
	"uwuland",
	"wayland",
	"wayland-compositor",
	"smithay",
	"compositor",
	"linux",
	"linux-utilities",
	"wm",
	"window-manager"
]

[workspace.dependencies]
# find a better way to do this lmao
smithay = { version = "0.3", default-features = false, features = [
	"backend_winit", "wayland_frontend", "desktop", "backend_session_libseat",
	"backend_drm", "renderer_multi", "renderer_glow", "backend_drm", "backend_gbm",
	"backend_egl", "backend_libinput", "backend_session_libseat", "backend_udev",
	"backend_winit", "backend_vulkan", "backend_x11", "use_system_lib", "xwayland"
] }

clap = { version = "4.3", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

anyhow = { version = "1.0" }
bitflags = { version = "2.4" }
colored = { version = "2.0" }
tracing-appender = { version = "0.2" }
log = { version = "0.4" }
chrono = { version = "0.4" }
smithay-drm-extras = { version = "0.1" }
once_cell = "1.18"
crossbeam-channel = "0.5"
lazy_static = "1.4"
parking_lot = "0.12"
xdg = "2.5"

[patch.crates-io]
smithay-drm-extras = { git = "https://github.com/smithay/smithay.git", rev = "e241ccbbc4dfc6ce38e33856d9d159e436db3b5e" }
smithay = { git = "https://github.com/smithay/smithay.git", rev = "e241ccbbc4dfc6ce38e33856d9d159e436db3b5e" }
